# nalaris

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  install.sh  pyproject.toml  start-gateway.sh  start.sh
.claude/: plan.md
docs/: customization.md
gateway/: __init__.py  agent_bridge.py  server.py  session_store.py
panel/: .gitignore  AGENTS.md  PLAN-custom-gateway.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
panel/public/: manifest.json  sw.js
panel/scripts/: persistence-e2e.mjs  probe-render.mjs  refresh-survives-chat.mjs  smoke-render.mjs  validate-server.mjs
panel/src/: App.tsx  main.tsx
panel/src/hooks/: useBlockAction.ts  useChat.ts
panel/src/lib/: api.ts  blocks-adapter.ts  clsx.ts  demo-blocks.ts  gateway.ts  push.ts  rich-content.ts  stream-blocks.ts  theme.ts  tw-merge.ts  utils.ts
panel/src/schemas/: action.ts  blocks.server.ts  blocks.spec.ts
panel/src/stores/: sessionStore.ts  userStore.ts
panel/src/styles/: base.css  tokens.css
panel/tools/: verify-blocks.py
profile/: config.yaml.example
profile/skills/nalaris-onboarding/: SKILL.md
profile/skills/personal-assistant/: SKILL.md
profile/skills/personal-assistant-chat-blocks/: SKILL.md
profile/vault-templates/: index.md
profile/vault-templates/Ops/: agent-directive.md  goals.md  index.md  one-thing.md  user-profile.md
src/project_rumah/: __init__.py  cli.py
src/project_rumah/gateway/: __init__.py  agent_bridge.py  derive_summary.py  paths.py  push.py  push_keys.py  server.py  session_store.py  sse.py
(+68 files in other folders)
